@@ -1,5 +1,6 @@
 #include <stic.h>
 
+#include "../../src/engine/text_buffer.h"
 #include "../../src/engine/variables.h"
 #include "../../src/utils/env.h"
 
@@ -23,7 +24,12 @@ TEST(envvar_table_updates_do_not_crash)
 TEST(cannot_unlet_builtin_vars)
 {
 	assert_success(setvar("v:test", var_from_bool(1)));
+
+	vle_tb_clear(vle_err);
 	assert_failure(unlet_variables("v:test"));
+	assert_string_equal("Unsupported variable type: v:test",
+			vle_tb_get_data(vle_err));
+
 	assert_true(getvar("v:test").type == VTYPE_INT);
 }
 
